<resources>
    <string name="app_name">Weather App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="now">Now</string>
    <string name="hourly">Hourly</string>
    <string name="forecast">Forecast</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="preassure">Preassure</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="na">n/a</string>
    <string name="updated">Updated</string>
    <string name="feels_like">Feels like</string>
    <string name="city_search">City search</string>
    <string name="search_hint">Enter city name</string>
    <string name="no_cities">We couldn\'t find any cities</string>
    <string name="search_country">Search for country to see forecast</string>
    <string name="no_weather_data">Couldn\'t find weather data for this country or city</string>
    <string name="no_connection">No network connection</string>
</resources>
